--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "Mostafa Eweda <mo.eweda@gmail.com>",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
+    "start": "node bin/server.js",
     "postinstall": "npm install --prefix ./client"
   },
   "dependencies": {
